--- a/HWYZ/Views/Roles/Edit.cshtml
+++ b/HWYZ/Views/Roles/Edit.cshtml
@@ -2,14 +2,23 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="exampleModalLabel">添加角色</h4>
+            <h4 class="modal-title" id="exampleModalLabel">编辑角色</h4>
         </div>
         <div class="modal-body">
             <form id="form_edit" action="roles/editRole" method="post">
-                <input type="hidden" name="RoleVal" value="0" />
+                <input type="hidden" name="ID" value="@ViewBag.role.ID" />
+                <input type="hidden" name="RoleVal" value="@ViewBag.role.RoleVal" />
                 <div class="form-group">
                     <label for="RoleName" class="control-label">角色名称:</label>
-                    <input type="text" class="form-control" name="RoleName" />
+                    <input type="text" class="form-control" name="RoleName" value="@ViewBag.role.RoleName"/>
+                </div>
+                <div class="form-group">
+                    <label for="Status" class="control-label">状态:</label>
+                    <select name="Status" class="form-control">
+                        <option value="enable">启用</option>
+                        <option value="disable">不启用</option>
+                    </select>
+                    <input type="hidden" id="Status" value="@ViewBag.role.Status"/>
                 </div>
                 <div class="form-group">
                     <label for="Auth" class="control-label">权限设置:</label>
