--- a/HWYZ/Views/Shared/_Layout.cshtml
+++ b/HWYZ/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     @foreach (Menu menu in MenuContext.menus)
                     {
 
-                        if ((Convert.ToInt16(menu.AuthVal) & roleVal) > 0)
+                        if ((menu.AuthVal & roleVal) > 0)
                         {
                             if (menu.SubMenu.Count == 0)
                             {
@@ -53,7 +53,7 @@
                             <ul id="@menu.ID" class="nav nav-list secondmenu collapse" style="height: 0px;">
                                 @foreach (Menu sub in @menu.SubMenu)
                                 {
-                                    if ((Convert.ToInt16(sub.AuthVal) & roleVal) > 0)
+                                    if ((sub.AuthVal & roleVal) > 0)
                                     {
                                     <li><a href="@sub.Url"><i class="glyphicon @sub.Icon"></i>&nbsp;@sub.Title</a></li>
                                     }
