--- a/HWYZ/Views/Users/Index.cshtml
+++ b/HWYZ/Views/Users/Index.cshtml
@@ -26,3 +26,6 @@
 
 @{Html.RegisterMvcPagerScriptResource();}
 @Scripts.Render("~/Scripts/Page/users.js")
+@Styles.Render("~/Scripts/select2/select2.css")
+@Scripts.Render("~/Scripts/select2/select2.min.js")
+@Scripts.Render("~/Scripts/select.js")
