--- a/HWYZ/Views/Users/Add.cshtml
+++ b/HWYZ/Views/Users/Add.cshtml
@@ -27,6 +27,17 @@
                         }
                     </select>
                 </div>
+                @if (HWYZ.Context.UserContext.user.Store == null)
+                {
+                    <div class="form-group">
+                        <label for="StoreId" class="control-label">所属门店:</label>
+                        <input type="hidden" data-select="s" name="StoreId" class="_select" style="width: 100%;" />
+                    </div>
+                }
+                else
+                {
+                    <input type="hidden" name="StoreId" value="@HWYZ.Context.UserContext.user.StoreId" />
+                }
                 <div class="form-group">
                     <label for="Sex" class="control-label">性别:</label>
                     <select name="Sex" class="form-control">
