--- a/HWYZ/Views/Users/Edit.cshtml
+++ b/HWYZ/Views/Users/Edit.cshtml
@@ -8,32 +8,42 @@
             <form id="form_edit" action="users/editUser" method="post">
                 <input type="hidden" name="ID" value="@ViewBag.user.ID" />
                 <div class="form-group">
-                    <label for="Account" class="control-label">用户编号:</label>
-                    <label class="form-control">@ViewBag.user.Account</label>
+                    <div class="input-group">
+                        <span class="input-group-addon">用户编号</span>
+                        <label class="form-control">@ViewBag.user.Account</label>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="DisplayName" class="control-label">用户姓名:</label>
-                    <input type="text" class="form-control" name="DisplayName" value="@ViewBag.user.DisplayName"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">用户姓名</span>
+                        <input type="text" class="form-control" name="DisplayName" value="@ViewBag.user.DisplayName"/>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="CardNumber" class="control-label">身份证号:</label>
-                    <input type="text" class="form-control" name="CardNumber" value="@ViewBag.user.CardNumber"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">身份证号</span>
+                        <input type="text" class="form-control" name="CardNumber" value="@ViewBag.user.CardNumber"/>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="Role" class="control-label">用户角色:</label>
-                    <select name="RoleId" class="form-control">
-                        @foreach (SelectListItem item in ViewBag.roles)
-                        {
-                            <option value="@item.Value">@item.Text</option>
-                        }
-                    </select>
-                    <input type="hidden" id="RoleId" value="@ViewBag.user.RoleId"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">用户角色</span>
+                        <select name="RoleId" class="form-control">
+                            @foreach (SelectListItem item in ViewBag.roles)
+                            {
+                                <option value="@item.Value">@item.Text</option>
+                            }
+                        </select>
+                        <input type="hidden" id="RoleId" value="@ViewBag.user.RoleId"/>
+                    </div>
                 </div>
                 @if (HWYZ.Context.UserContext.user.Store == null)
                 {
                     <div class="form-group">
-                        <label for="StoreId" class="control-label">所属门店:</label>
-                        <input type="hidden" data-select="s" name="StoreId" class="_select" style="width: 100%;" data-value="@ViewBag.storeName" data-id="@ViewBag.user.StoreId"/>
+                        <div class="input-group">
+                            <span class="input-group-addon">所属门店</span>
+                            <input type="hidden" data-select="s" name="StoreId" class="_select" style="width: 100%;" data-value="@ViewBag.storeName" data-id="@ViewBag.user.StoreId"/>
+                        </div>
                     </div>
                 }
                 else
@@ -41,28 +51,36 @@
                     <input type="hidden" name="StoreId" value="@HWYZ.Context.UserContext.user.StoreId" />
                 }
                 <div class="form-group">
-                    <label for="Sex" class="control-label">性别:</label>
-                    <select name="Sex" class="form-control">
-                        <option value="male">男</option>
-                        <option value="female">女</option>
-                    </select>
-                    <input type="hidden" id="Sex" value="@ViewBag.user.Sex"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">性别</span>
+                        <select name="Sex" class="form-control">
+                            <option value="male">男</option>
+                            <option value="female">女</option>
+                        </select>
+                        <input type="hidden" id="Sex" value="@ViewBag.user.Sex"/>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="Tel" class="control-label">联系电话:</label>
-                    <input type="text" class="form-control" name="Tel" value="@ViewBag.user.Tel"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">联系电话</span>
+                        <input type="text" class="form-control" name="Tel" value="@ViewBag.user.Tel"/>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="Status" class="control-label">状态:</label>
-                    <select name="Status" class="form-control">
-                        <option value="enable">启用</option>
-                        <option value="disable">不启用</option>
-                    </select>
-                    <input type="hidden" id="Status" value="@ViewBag.user.Status"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">状态</span>
+                        <select name="Status" class="form-control">
+                            <option value="enable">启用</option>
+                            <option value="disable">不启用</option>
+                        </select>
+                        <input type="hidden" id="Status" value="@ViewBag.user.Status"/>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="Remark" class="control-label">备注:</label>
-                    <input type="text" class="form-control" name="Remark" value="@ViewBag.user.Remark"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">备注</span>
+                        <input type="text" class="form-control" name="Remark" value="@ViewBag.user.Remark"/>
+                    </div>
                 </div>
             </form>
         </div>
