--- a/HWYZ/Views/StoreGrant/Add.cshtml
+++ b/HWYZ/Views/StoreGrant/Add.cshtml
@@ -8,12 +8,6 @@
             <form id="form_edit" action="storegrant/editStore" method="post">
                 <div class="form-group">
                     <div class="input-group">
-                        <span class="input-group-addon">门店编号</span>
-                        <input type="text" class="form-control" name="StoreCode" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
                         <span class="input-group-addon">门店名</span>
                         <input type="text" class="form-control" name="StoreName" />
                     </div>
@@ -35,6 +29,7 @@
                         <div class="input-group">
                             <span class="input-group-addon">县</span>
                             <input type="hidden" data-select="co" name="Country" class="_select" style="width: 100%;" />
+                            <input type="hidden" name="CityCode" />
                         </div>
                     </div>
                 </div>
