--- a/HWYZ/Views/StoreGrant/Edit.cshtml
+++ b/HWYZ/Views/StoreGrant/Edit.cshtml
@@ -19,24 +19,10 @@
                         <input type="text" class="form-control" name="StoreName" value="@ViewBag.store.StoreName" />
                     </div>
                 </div>
-                <div class="form-group row">
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">省</span>
-                            <input type="hidden" data-select="p" name="Province" class="_select" style="width: 100%;" value="@ViewBag.store.Province" />
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">市</span>
-                            <input type="hidden" data-select="ci" name="City" class="_select" style="width: 100%;" value="@ViewBag.store.City" />
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">县</span>
-                            <input type="hidden" data-select="co" name="Country" class="_select" style="width: 100%;" value="@ViewBag.store.Country" />
-                        </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">所在城市</span>
+                        <label class="form-control">@ViewBag.store.Province @ViewBag.store.City @ViewBag.store.Country</label>
                     </div>
                 </div>
                 <div class="form-group">
