--- a/HWYZ/Views/ProductSet/List.cshtml
+++ b/HWYZ/Views/ProductSet/List.cshtml
@@ -43,13 +43,13 @@
                         @if (UserContext.user.StoreId == @item.StoreId)
                         {
                             <a href="javascript:void(0)" class="editProduct" data-toggle="modal" data-target="#dlg_edit">编辑</a>
+                            <span>|</span>
+                            <a href="javascript:void(0)" class="delProduct">删除</a>
                         }
                         else
                         {
                             <a href="javascript:void(0)" class="viewProduct" data-toggle="modal" data-target="#dlg_view">查看</a>
                         }
-                        |
-                        <a href="javascript:void(0)" class="delProduct">删除</a>
                     </td>
                 </tr>
                 }
