--- a/HWYZ/Views/ProductDelive/List.cshtml
+++ b/HWYZ/Views/ProductDelive/List.cshtml
@@ -32,14 +32,7 @@
                     }
                     <td>@item.Creator</td>
                     <td>@item.Tel</td>
-                    @if (@item.Status == OrderStatus.BeforeSubmit)
-                    {
-                        <td>尚未提交</td>
-                    }
-                    else
-                    {
-                        <td>@item.SubmitTime</td>
-                    }
+                    <td>@item.SubmitTime</td>
                     <td>@item.Payable</td>
                     @switch (@item.Status)
                     {
@@ -49,16 +42,7 @@
                         case OrderStatus.Reject:<td>驳回</td>; break;
                     }
                     <td data-id="@item.ID">
-                        @if (@item.Status == OrderStatus.BeforeSubmit)
-                        {
-                            <a href="OrderEdit?orderId=@item.ID" target="_blank" class="editOrder">编辑</a>
-                            <span>|</span>
-                            <a href="javascript:void(0)" class="delOrder">删除</a>
-                        }
-                        else
-                        {
-                            <a href="OrderView?orderId=@item.ID" target="_blank" class="editOrder">查看</a>
-                        }
+                        <a href="DeliveEdit?orderId=@item.ID" target="_blank" class="editOrder">查看</a>
                     </td>
                 </tr>
                 }
@@ -73,22 +57,3 @@
         @Ajax.Pager(Model, new PagerOptions { CssClass = "table-page", PageIndexParameterName = "pi", CurrentPagerItemWrapperFormatString = "<span class=\"active\">{0}</span>", NumericPagerItemWrapperFormatString = "<span>{0}</span>", FirstPageText = "首页&nbsp;&nbsp;", PrevPageText = "前一页", NextPageText = "下一页", LastPageText = "&nbsp;&nbsp;尾页" }, new MvcAjaxOptions { UpdateTargetId = "container", HttpMethod = "Post", DataFormId = "form_query" })
     }
 </div>
-<script type="text/javascript">
-    $(function () {
-        $(".delOrder").click(function () {
-            if (!confirm("您确定要删除此订单？")) { return false; }
-
-            var _this = $(this);
-
-            $.post("order/delOrder", { orderId: _this.parent().data('id') }, function (r) {
-                alert(r.msg);
-
-                if (r.code < 0) {
-                    return false;
-                }
-
-                $("#form_query").submit();
-            });
-        });
-    });
-</script>
