--- a/HWYZ/Views/ProductNumber/Edit.cshtml
+++ b/HWYZ/Views/ProductNumber/Edit.cshtml
@@ -6,43 +6,29 @@
         </div>
         <div class="modal-body">
             <form id="form_edit" action="orderedit/editItem" method="post">
-                <input type="hidden" name="OrderId" value="@ViewBag.orderId" />
-                <input type="hidden" name="ID" value="@ViewBag.item.ID" />
+                <input type="hidden" name="ID" value="@ViewBag.product.ID" />
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">商品名称</span>
-                        <input type="text" name="ProductName" readonly="readonly" class="form-control"  value="@ViewBag.item.ProductName"/>
+                        <input type="text" name="ProductName" readonly="readonly" class="form-control"  value="@ViewBag.product.Product.ProductName"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">商品编号</span>
-                        <input type="text" name="ProductCode" readonly="readonly" class="form-control"  value="@ViewBag.item.ProductCode"/>
+                        <input type="text" name="ProductCode" readonly="readonly" class="form-control"  value="@ViewBag.product.Product.ProductCode"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">单价</span>
-                        <input type="text" name="Price" readonly="readonly" class="form-control"   value="@ViewBag.item.Price"/>
+                        <input type="text" name="Price" readonly="readonly" class="form-control"   value="@ViewBag.product.Product.Price"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">发货数量</span>
-                        <input type="text" name="OrderNumber" class="form-control"   value="@ViewBag.item.OrderNumber"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon">折扣系数</span>
-                        <input type="text" name="Discount" readonly="readonly" class="form-control" value="@ViewBag.item.Discount" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon">金额</span>
-                        @{var pay = @ViewBag.item.Price * @ViewBag.item.OrderNumber * @ViewBag.item.Discount;}
-                        <input type="text" readonly="readonly" id="pay" class="form-control" value="@pay" />
+                        <input type="text" name="OrderNumber" class="form-control"   value="@ViewBag.product.ProductNumber"/>
                     </div>
                 </div>
             </form>
