将系统中所有的折扣替换为字典 商品添加分类属性

--- a/HWYZ/Views/ProductSet/Add.cshtml
+++ b/HWYZ/Views/ProductSet/Add.cshtml
@@ -1,4 +1,6 @@
-﻿<style>
+﻿@using HWYZ.Models;
+
+<style>
     .webuploader-container div:first-child { width: 86px; height: 40px; }
 </style>
 <div class="modal-dialog" role="document">
@@ -31,6 +33,17 @@
                     <div class="input-group">
                         <span class="input-group-addon">价格</span>
                         <input type="text" class="form-control" name="Price" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">商品类别</span>
+                        <select class="form-control" name="ProductType">
+                            @foreach (Dictionary dict in ViewBag.kinds)
+                            {
+                                <option value="@dict.Code">@dict.Name</option>
+                            }
+                        </select>
                     </div>
                 </div>
                 <div class="form-group">
