--- a/HWYZ/Views/ProductSet/View.cshtml
+++ b/HWYZ/Views/ProductSet/View.cshtml
@@ -32,6 +32,12 @@
                 </div>
                 <div class="form-group">
                     <div class="input-group">
+                        <span class="input-group-addon">商品类别</span>
+                        <label class="form-control">@ViewBag.product.ProductType</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
                         <span class="input-group-addon">允许退换货</span>
                         @if (ViewBag.product.AllowReturn)
                         {
